# homework_diff

./: README.md
Модуль 6/1/: CMakeLists.txt  generate.bat  main.cpp
Модуль 6/1/include/: client.h  interface.h  number.h
Модуль 6/1/src/: client.cpp  interface.cpp  number.cpp
Модуль 6/2/: 2.cpp  2.sln  2.vcxproj  2.vcxproj.filters  tables.cpp  tables.h
